--- a/themes/linkstree/layouts/_partials/header.html
+++ b/themes/linkstree/layouts/_partials/header.html
@@ -1,3 +1,8 @@
-{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+<div class="header-wrapper">
+  {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+  <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+    <i class="fas fa-moon" id="theme-icon"></i>
+  </button>
+</div>
 
 
