--- a/themes/linkstree/layouts/_partials/head.html
+++ b/themes/linkstree/layouts/_partials/head.html
@@ -1,5 +1,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
+<meta property="og:title" content='{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}' />
+<meta property="og:description" content='{{ if .IsHome }}{{ site.Params.Author.bio }}{{ else }}{{ .Summary }}{{ end }}' />
+<meta property="og:image" content="/images/author/fuenrob.jpg" />
+<meta property="og:url" content="{{ .Permalink }}" />
+<meta property="og:type" content="article" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content='{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}' />
+<meta name="twitter:description" content="{{ if .IsHome }}{{ site.Params.Author.bio }}{{ else }}{{ .Summary }}{{ end }}" />
+<meta name="twitter:image" content="/images/author/fuenrob.jpg" />
+<meta name="twitter:site" content="@FuenRob" />
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
